# CNN

./: .gitignore  README.md  main.cpp
.github/workflows/: ci.yml
include/: core.hpp  network.hpp  utility.hpp
include/core/: compile_range.hpp  features_shape.hpp  layer_shape.hpp  network_types.hpp  slice_tuple.hpp  types.hpp
include/core/helper/: add_tuple.hpp  compile_range.hpp  concepts.hpp  loop_unroll.hpp  slice_tuple.hpp  split_tuple.hpp
include/core/learning/: activation.hpp  loss.hpp  optimization.hpp
include/core/types/: heap_tensor.hpp  layer_shapes.hpp  layer_types.hpp  stack_tensor.hpp  types.hpp  types_shape.hpp
include/network/: activation.hpp  network.hpp  network_assess.hpp  network_backward.hpp  network_base.hpp  network_evaluate.hpp  network_forward.hpp  network_gradient.hpp  network_train.hpp
include/network/utility/: compile_range.hpp  network_types.hpp
include/utility/: image_conversion.hpp  image_processing.hpp  tiny_data_loader.hpp  tiny_imagenet_loader.hpp  utility.hpp
test/: helper_test.cpp  learning_test.cpp  meson.build  type_test.cpp
